v. 2.0.0 beta test + geoSpy

--- a/camera.html
+++ b/camera.html
@@ -45,5 +45,53 @@
         // do something
     }
 </script>
+<div data-b24-crm-button-cont="" class="b24-widget-button-wrapper b24-widget-button-position-bottom-right b24-widget-button-visible ">
+    <div data-b24-crm-hello-cont="" class="b24-widget-button-popup" style="border-color: #A6DC00;">
+        <span data-b24-hello-btn-hide="" class="b24-widget-button-popup-btn-hide"></span>
+        <div class="b24-widget-button-popup-inner">
+            <div class="b24-widget-button-popup-image">
+                <span data-b24-hello-icon="" class="b24-widget-button-popup-image-item"></span>
+            </div>
+            <div class="b24-widget-button-popup-content">
+                <div data-b24-hello-name="" class="b24-widget-button-popup-name"></div>
+                <div data-b24-hello-text="" class="b24-widget-button-popup-description"></div>
+            </div>
+        </div>
+        <div class="b24-widget-button-popup-triangle" style="border-color: #A6DC00;"></div>
+    </div>
+
+    <div data-b24-crm-button-block="" class="b24-widget-button-social b24-widget-button-hide">
+
+        <a data-b24-crm-button-widget-blank="" data-b24-crm-button-widget="crmform" class="b24-widget-button-social-item b24-widget-button-crmform" title="" data-b24-widget-sort="300" style="background-color: rgb(166, 220, 0); background-image: url(&quot;data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23FFFFFF%22%20fill-rule%3D%22evenodd%22%20d%3D%22M22.407%200h-21.1C.586%200%200%20.586%200%201.306v21.1c0%20.72.586%201.306%201.306%201.306h21.1c.72%200%201.306-.586%201.306-1.305V1.297C23.702.587%2023.117%200%2022.407%200zm-9.094%2018.046c0%20.41-.338.737-.738.737H3.9c-.41%200-.738-.337-.738-.737v-1.634c0-.408.337-.737.737-.737h8.675c.41%200%20.738.337.738.737v1.634zm7.246-5.79c0%20.408-.338.737-.738.737H3.89c-.41%200-.737-.338-.737-.737v-1.634c0-.41.337-.737.737-.737h15.923c.41%200%20.738.337.738.737v1.634h.01zm0-5.8c0%20.41-.338.738-.738.738H3.89c-.41%200-.737-.338-.737-.738V4.822c0-.408.337-.737.737-.737h15.923c.41%200%20.738.338.738.737v1.634h.01z%22/%3E%3C/svg%3E&quot;);">
+            <span data-b24-crm-button-tooltip="" class="b24-widget-button-social-tooltip">Форма</span>
+        </a><a data-b24-crm-button-widget-blank="" data-b24-crm-button-widget="openline_telegrambot" class="b24-widget-button-social-item connector-icon connector-icon-45 connector-icon-telegrambot" title="" data-b24-widget-sort="400" href="https://telegram.me/YourMentor_bot" target="_blank">
+        <span data-b24-crm-button-tooltip="" class="b24-widget-button-social-tooltip">Telegram</span>
+    </a><a data-b24-crm-button-widget-blank="" data-b24-crm-button-widget="openline_vkgroup" class="b24-widget-button-social-item connector-icon connector-icon-45 connector-icon-vkgroup" title="" data-b24-widget-sort="500" href="http://vk.me/club133030854" target="_blank">
+        <span data-b24-crm-button-tooltip="" class="b24-widget-button-social-tooltip">Вконтакте</span>
+    </a></div>
+    <div data-b24-crm-button-block-button="" class="b24-widget-button-inner-container">
+        <div data-b24-crm-button-block-border="" class="b24-widget-button-inner-mask" style="background: #A6DC00;"></div>
+        <div class="b24-widget-button-block">
+            <div data-b24-crm-button-pulse="" class="b24-widget-button-pulse b24-widget-button-pulse-animate" style="border-color: #A6DC00;"></div>
+            <div data-b24-crm-button-block-inner="" class="b24-widget-button-inner-block" style="background: #A6DC00;">
+                <div class="b24-widget-button-icon-container">
+                    <div data-b24-crm-button-icon="crmform" class="b24-widget-button-inner-item ">
+                        <svg class="b24-crm-button-icon" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 28">
+                            <path class="b24-crm-button-webform-icon" fill="#FFFFFF" fill-rule="evenodd" d="M815.406703,961 L794.305503,961 C793.586144,961 793,961.586144 793,962.305503 L793,983.406703 C793,984.126062 793.586144,984.712206 794.305503,984.712206 L815.406703,984.712206 C816.126062,984.712206 816.712206,984.126062 816.712206,983.406703 L816.712206,962.296623 C816.703325,961.586144 816.117181,961 815.406703,961 L815.406703,961 Z M806.312583,979.046143 C806.312583,979.454668 805.975106,979.783264 805.575462,979.783264 L796.898748,979.783264 C796.490224,979.783264 796.161627,979.445787 796.161627,979.046143 L796.161627,977.412044 C796.161627,977.003519 796.499105,976.674923 796.898748,976.674923 L805.575462,976.674923 C805.983987,976.674923 806.312583,977.0124 806.312583,977.412044 L806.312583,979.046143 L806.312583,979.046143 Z M813.55946,973.255747 C813.55946,973.664272 813.221982,973.992868 812.822339,973.992868 L796.889868,973.992868 C796.481343,973.992868 796.152746,973.655391 796.152746,973.255747 L796.152746,971.621647 C796.152746,971.213122 796.490224,970.884526 796.889868,970.884526 L812.813458,970.884526 C813.221982,970.884526 813.550579,971.222003 813.550579,971.621647 L813.550579,973.255747 L813.55946,973.255747 Z M813.55946,967.45647 C813.55946,967.864994 813.221982,968.193591 812.822339,968.193591 L796.889868,968.193591 C796.481343,968.193591 796.152746,967.856114 796.152746,967.45647 L796.152746,965.82237 C796.152746,965.413845 796.490224,965.085249 796.889868,965.085249 L812.813458,965.085249 C813.221982,965.085249 813.550579,965.422726 813.550579,965.82237 L813.550579,967.45647 L813.55946,967.45647 Z" transform="translate(-793 -961)"></path>
+                        </svg>
+                    </div>
+                    <div data-b24-crm-button-icon="openline" class="b24-widget-button-inner-item b24-widget-button-icon-animation">
+                        <svg class="b24-crm-button-icon b24-crm-button-icon-active" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 29">
+                            <path class="b24-crm-button-chat-icon" fill="#FFFFFF" fill-rule="evenodd" d="M878.289968,975.251189 L878.289968,964.83954 C878.289968,963.46238 876.904379,962 875.495172,962 L857.794796,962 C856.385491,962 855,963.46238 855,964.83954 L855,975.251189 C855,976.924031 856.385491,978.386204 857.794796,978.090729 L860.589592,978.090729 L860.589592,981.876783 L860.589592,983.76981 L861.521191,983.76981 C861.560963,983.76981 861.809636,982.719151 862.45279,982.823297 L866.179185,978.090729 L875.495172,978.090729 C876.904379,978.386204 878.289968,976.924031 878.289968,975.251189 Z M881.084764,971.465135 L881.084764,976.197702 C881.43316,978.604561 879.329051,980.755508 876.426771,980.93027 L868.042382,980.93027 L866.179185,982.823297 C866.400357,983.946455 867.522357,984.94992 868.973981,984.716324 L876.426771,984.716324 L879.221567,988.502377 C879.844559,988.400361 880.153166,989.448891 880.153166,989.448891 L881.084764,989.448891 L881.084764,987.555864 L881.084764,984.716324 L882.947962,984.716324 C884.517696,984.949819 885.742758,983.697082 885.742758,981.876783 L885.742758,974.304675 C885.742659,972.717669 884.517597,971.465135 882.947962,971.465135 L881.084764,971.465135 Z" transform="translate(-855 -962)"></path>
+                        </svg>
+                    </div>
+                </div>
+                <div class="b24-widget-button-inner-item b24-widget-button-close">
+                    <svg class="b24-widget-button-icon b24-widget-button-close-item" xmlns="http://www.w3.org/2000/svg" width="29" height="29" viewBox="0 0 29 29"><path fill="#FFF" fill-rule="evenodd" d="M18.866 14.45l9.58-9.582L24.03.448l-9.587 9.58L4.873.447.455 4.866l9.575 9.587-9.583 9.57 4.418 4.42 9.58-9.577 9.58 9.58 4.42-4.42"></path></svg>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
